# jinji

./: Cargo.toml  README.md
examples/: concept.md
src/: main.rs
src/filters/: banana.rs  mod.rs
src/functions/: http_get.rs  mod.rs
