[package]
name = "jinji"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/vim-zz/jinji/"
exclude = ["/examples", "/tests", "*.gif"]
description = "Cli tool for processing text from files or stdin, with templating and format options."

[[bin]]
path = "src/main.rs"
name = "jinji"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.21"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1"
serde_yaml = "0.9"
tera = "1"


[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size.